// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`letter 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`letter 'b' conditional success tests AST matches snapshot 1`] = `"b"`;

exports[`letter 'z' conditional success tests AST matches snapshot 1`] = `"z"`;

exports[`letter '#' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letter '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "a letter",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters 'a' conditional success tests AST matches snapshot 1`] = `"a"`;

exports[`letters 'bb' conditional success tests AST matches snapshot 1`] = `"bb"`;

exports[`letters 'zz' conditional success tests AST matches snapshot 1`] = `"zz"`;

exports[`letters '#' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "optional letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters ' ' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "optional letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;

exports[`letters '' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "optional letters",
  ],
  "pos": {
    "column": 1,
    "index": 0,
    "line": 1,
  },
}
`;
